# ChangeLog for media-sound/rosegarden
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/rosegarden/ChangeLog,v 1.108 2013/03/26 11:41:16 ago Exp $

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> rosegarden-13.02.ebuild:
  Stable for x86, wrt bug #463104

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> rosegarden-13.02.ebuild:
  Stable for amd64, wrt bug #463104

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> rosegarden-12.04.ebuild,
  rosegarden-12.12.25.ebuild, rosegarden-13.02.ebuild:
  Move Qt dependencies to the new category

*rosegarden-13.02 (21 Feb 2013)

  21 Feb 2013; Tim Harder <radhermit@gentoo.org> +rosegarden-13.02.ebuild:
  Version bump.

  14 Feb 2013; Agostino Sarubbo <ago@gentoo.org> rosegarden-12.12.25.ebuild:
  Stable for x86, wrt bug #457402

  14 Feb 2013; Agostino Sarubbo <ago@gentoo.org> rosegarden-12.12.25.ebuild:
  Stable for amd64, wrt bug #457402

*rosegarden-12.12.25 (14 Jan 2013)

  14 Jan 2013; Tim Harder <radhermit@gentoo.org> +rosegarden-12.12.25.ebuild,
  +files/rosegarden-12.12.25-debug.patch:
  Version bump.

  23 Sep 2012; Samuli Suominen <ssuominen@gentoo.org>
  -rosegarden-11.11.11.ebuild, -rosegarden-11.11.42.ebuild:
  old

  23 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> rosegarden-12.04.ebuild:
  x86 stable wrt bug #434310

  09 Sep 2012; Agostino Sarubbo <ago@gentoo.org> rosegarden-12.04.ebuild:
  Stable for amd64, wrt bug #434310

*rosegarden-12.04 (14 May 2012)

  14 May 2012; Tim Harder <radhermit@gentoo.org> +rosegarden-12.04.ebuild:
  Version bump (bug #415189).

  05 May 2012; Michał Górny <mgorny@gentoo.org> rosegarden-11.11.11.ebuild,
  rosegarden-11.11.42.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  06 Apr 2012; Samuli Suominen <ssuominen@gentoo.org> -rosegarden-11.02.ebuild:
  old

*rosegarden-11.11.42 (06 Apr 2012)

  06 Apr 2012; Samuli Suominen <ssuominen@gentoo.org>
  +rosegarden-11.11.42.ebuild:
  Version bump.
