@@ -1,29 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX rosegarden-12.12.25-debug.patch 762 SHA256 51634e806a7876e4c944c0ce302934644d48c0f4f2cffb4e1f5ec8e7246831dc SHA512 20897f94f366c1f8cf0df503a7949fc7b77f84cd893bbf24819e84a061e8b9fd0d179e3d95bbb13edfbd413e8c9bf8db1f92178781566c30a66a56b61bec83ca WHIRLPOOL 02ba461651d8aab8bc2aa85b5235450349bcec9d11ea6ed7c7c9cabf61fb065ccae46de6d90717d22d8371d8e95a0d7c59a9febb44caf6f9765ed94c77a3836e
 DIST rosegarden-12.04.tar.bz2 5971442 SHA256 bcf5705c34144269d4d18c68f3dd4633a628a5619c0728969971473a469eee8a SHA512 2e30acfba3c8b8161dfb44bef41e7ee96fc15c7522a008640cd6e04e80b2c6a0438560a5dd6ab2ee4c235465aa829152ebe53d4c395da656b1faef40cb32edcc WHIRLPOOL ac0e903304b397cbcfe4307af9157c8321590b6dd8217702daaee01388f8aab4b13c5e18fbc87c368813a7d18fbac91c761b14f57dbd3e9452d6db2e8c1c7ba6
 DIST rosegarden-12.12.25.tar.bz2 6049336 SHA256 f4efc73428ceae484c3833ea0d9666338870410afade311a0b6d06a8481b87ee SHA512 f306c462de09df1508543fe2adcb49bd6844630b18e99febcbb268dcdbd395a669ba0636fa2700b665eee84820bad72b773c54e425dc4007859e203624cfe446 WHIRLPOOL b4228cd211ff126c0ee6ca2971a886c5314eff9820ac06ef870795bfef7aa353452e4253287f9b2fc210507994abb9182ae0cd70ef1da986640a2328c47faf1b
 DIST rosegarden-13.02.tar.bz2 6060650 SHA256 b2bf1ee6c9fe0af9ca84ba0729c67453ba1070365473c2266cc61c84aa7da18c SHA512 8fd495cd9d128870d69478380c2493e87a6401e3174f80a7416e9683070046f9438048213d38ff8970231d8b5b36e6e5759c615d01881583c4d156765ac2a872 WHIRLPOOL 9c0d74dbd687e769ca1f461deca3b6e03f33fa8af503ebc194b4ef3008a43e0c24f0bf4c09d9a23a982393a71d3428a3e3af88cf25d608897836050ddb0d8ac9
+DIST rosegarden-13.04.tar.bz2 5858085 SHA256 4d8dabb08a7b807cad46d64d808752a82e26dc6d0144e5849392c51421936c7d SHA512 a01bf391be92c564d20d53c03556552cf5e9cd8f1b1eda49de18432dbcb97ed8c65795efb2275ae9a2f91c7701ea71d3497bbf062606331dbe3487a41c33cdfa WHIRLPOOL 5b4fe5a149350a64cabbde04b5c16cdda92f848c1aa45adbf4136c3f55da75dc07434f8d126404334a477e36922e5fd1c5efe66fa46e9b38d42b661b3c158ecd
 EBUILD rosegarden-12.04.ebuild 1504 SHA256 77c265349ba351fc2875c8bb5dc2698bb7d666056d07306264044e2d064123cc SHA512 b0b75408fbe566624c73d5528ec3cac2d76d9405602cfd57a28f902fb31d1a2fd305322b972034cafd0081a1f3825f6884691f17987989d4162c5d40075deeff WHIRLPOOL ffa41101f1be0300abd6325bc3575c133cd966186d65e3285e8eb4e6dd4fdc79cfbf6aaca08f437704b52649a75b14b94791d2a59334e6fb8155500b45ad660e
 EBUILD rosegarden-12.12.25.ebuild 1493 SHA256 a65b2fca65ddcfaa9699b983c2ec538ea4d15174ccad462833fc7b025ff466e4 SHA512 49fd66c822a9ff37d2e081c869a8d5ae05af0f99a1ec5242b3ef06dcf602ffcd0f0946bf4524ccf0858b91f2f962fefede013d3982fbcdafe3ddcd1e63bec517 WHIRLPOOL 8b12ff7df076d0ef6ef6194d022e0fdaa65fb5ffc8415bfdc761fa5db132fea67bb27f15b2863a75b893b27de2afcec05ad3bf994093687e8583d291428efabc
 EBUILD rosegarden-13.02.ebuild 1495 SHA256 0f8fd2e27de69dbf52806492bde02704bfd7776dc21e401fce3a25e5dce1a608 SHA512 20120201a770215171a8b66d7d152e6e31fd870b016356fba848d5a6dafa40a421e761b11bccdc54a7c1b902d3057afaa2b749a18ef06a12275dedb4d59116cd WHIRLPOOL 16dbd0ccc8c14041cf109b3d383be9dc81cfa865e275d2a049423967d40553d3f27cbc74a30502144d24f249dc90ed8329922e9391833e49be19e9ab5cccf3de
-MISC ChangeLog 15819 SHA256 dac3b1267be379fc75a522d14d4e95eee56bc0acb9eac53e21117bc2b0be34c2 SHA512 736554eb92d34057f32665739e250f86b97321e9909e26d42c51a5ca46cc9d41ebe0bb431e91d5301f1f68a0c0fd8d059bc4595793186e7f2177260d662697d4 WHIRLPOOL f895802c7ac4a598a1c9761959f405c026a43da8e2bb7a1b26ded2dca5f40dd30b523ce34a67666db0b0b5db836fdc7ecd1b58cf2ca88c04516a7e4a53e19c79
+EBUILD rosegarden-13.04.ebuild 1503 SHA256 d271dff1cc04bd47b5a483921ae23867b4eff8297bd86107b1192c350438e6e5 SHA512 93854aafa35e9c7387aa2b5f5216b2919aee90d99c64834288b76019a90011355cf244ff4ce169a37b79622d5998f550f49021376e909e728f9c1de711dcafce WHIRLPOOL b48889db9ca896efae6794a6efc8a70117fdbaec6748347c662aa7296878233ff00e00bfe9041cd1da4977efa3dd55bf46180c400f689e0d7afc3e92f81a4c14
+MISC ChangeLog 15950 SHA256 4d61f28ee48dc199a4c1c6fdd8d788518c2d507b68000ba8834e4f57267bfb78 SHA512 e6d68d7ff50d54f731525c93a45a32e7ba511aa56d69614be8522210f6e31a65df8efe1d5f17cc6bf8b6fb860a7e7768edebfe80f4d7b3230c41b3215076ebd2 WHIRLPOOL 073fc026a3c41398e5c11a833e59e2d5ebef24ea06b5b52a15f3446944f6db21728357122592a7edde2a21b3caa833b8dd7d0854f2f8dc20f6b81883e21373f7
 MISC metadata.xml 163 SHA256 39a67c65d2e7583b6ee9e20fcab1fd821e28c51134eb2f76a7fe0598a2c2b4cb SHA512 9f75bebfe63cca16660e90ff8d0f4fb6a7b2923630c72616134f69273306434c3060eb2be81b6bc619dfdce11bc0e76d3ba874007ddf866367a81fc2279b9496 WHIRLPOOL 6de4b890a3933fb8231bf774fbb466595fee98bb2a4cfcbd1592f30f9aa50ac0f53a32d57703d55cfcd5a7e5af8c407229cd72cbaf1382cc2a2147ddf5cc4e05
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRUYlbAAoJELp701BxlEWfQg8QAMPLBU6FA6Gzc2ktMZBCGmlf
-hj66nLuwqYtFDMSGmyoeyLfVp0MwLnBWI9W+5/7o+VLjraJ+80eIf+WPK4KUbzu9
-ntBnl9w/eOC8mUPnTHB8VMGc83LXZikMmAfclVThf4StBwflcjzTseRPCdNWva/v
-8Sr29/Qx28YwqDHDSQygjE48XNqJgYxBrWZotZnsGB52cYrMK4c7w4p18Tq38jyd
-VkC33IFjoauzfSxmRQ4SLLXqGfZSyxL/xgV8Y2wy+AniHaTw60AUYkE4vJtZ2jSR
-9YyJvwmeHEp+9h8ZfKWbc3L1qIpjJTmYQmGLI7tutEvQSgTzmrsBLPCmzKgwzU2U
-gmlaB1LLq9AJlWKGdKL/TYj8v5wVHCVUEm4hZZE8T9UNpYyzBWkrBw3l8NfKoOtP
-/1edUwXsLEnfmtdNzdQaMQmOM/jyD205Z9a9DGaB1V6gTVeG4XqitdE+lvxeWZTO
-jml37lEcuk9leC31EeZBdIZ7VXjV2KMZIpzlyVS6SMOnTRxVHZFOdvimtH5pv4G8
-TaWtJ7swyZQlVfBeUOm4H04DUBVN8PeB6HGV398ekrf1d1QPmHWV+slqTSpxtPeo
-0F1oVX1DTdAXBl33+ANkfRDaySLnFDhGvUDcyUEK5n2RSAARvqlWSgoo3iOp7z+o
-OaJhZoqLo/iIXIjO9gwP
-=Jr4t
+iQEcBAEBCAAGBQJRXqCYAAoJEEqz6FtPBkyjXWgH/2J7awxXex9oJuST+ddRvfgb
+GJB7DVCaY1u6IdfRwCohV1ryZ5mhmiYIRHTbqnOSWmzOGM+pWemWIzlbesJUj9f4
+Mpj5horDpBjYl6lsw28fXYMvr/Yj/aGaZAmS47Yh4o9OExWxf+pjYVUgfOUqjLk1
+AKjT8x8KddL56/f2x0Tg16F4NYbL6zfTr57njfHqF/H5EP29udtyA+Kmi7nYOIW7
+PeWmu4fiFJ0HygSY3jvzQ17YrfSK8UWMFKZyQDq1f6bgFYctvHPtc8VLGGOaSEz0
+yKaU2GtbHNc7Jzq/XJrIWnIaffsKa2inqttgtF792JK/3KG9v/VDrhNEm5BNZxQ=
+=c1Ps
 -----END PGP SIGNATURE-----
