@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/rosegarden
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/rosegarden/ChangeLog,v 1.108 2013/03/26 11:41:16 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/rosegarden/ChangeLog,v 1.109 2013/04/05 09:59:51 radhermit Exp $
+
+*rosegarden-13.04 (05 Apr 2013)
+
+  05 Apr 2013; Tim Harder <radhermit@gentoo.org> +rosegarden-13.04.ebuild:
+  Version bump.
 
   26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> rosegarden-13.02.ebuild:
   Stable for x86, wrt bug #463104
